# Linux_Kernel_Devolopment

./: README.md
Create_Synch_Process/: README.md
Create_Synch_Process/source/: CMakeLists.txt  main.c
Create_Synch_Thread/source/: READMED.md  main.c
Memory_Process_IPC/: README.md
Memory_Process_IPC/MessageQueue/receiver/source/: CMakeLists.txt  main.c
Memory_Process_IPC/MessageQueue/sender/source/: CMakeLists.txt  main.c
Memory_Process_IPC/SharedMem/reader/source/: CMakeLists.txt  main.c
Memory_Process_IPC/SharedMem/writer/source/: CMakeLists.txt  main.c
